# Reverse-sheet-sky-children-of-the-light

./: .gitignore  .pre-commit-config.yaml  1_2_vidoe_display.py  1_effect_config.py  1_get_boundary.py  2_analysis_video.py  3_1_change_colorspaces.py  3_generate_native_sheet.py  4_generate_sheet.py  4_play_sheet_video.py  Away form the rain.txt  Launcher_1_effect_config.cmd  Launcher_2_analysis_video.cmd  Launcher_3_generate_native_sheet.cmd  Launcher_4_play_sheet_video.cmd  Launcher_Refactor_flow_for_1.cmd  Launcher_analysis.cmd  Launcher_convert_skymusic.cmd  Launcher_play_sheet.cmd  Launcher_play_video.cmd  Launcher_player_skysheet.cmd  README.md  Refactor_flow_for_1.py  analysis.py  convert_skymusic.py  find_circle.py  frame_keyboards.txt  generate_sheet.py  get_boundary.py  hsv_fix.py  main.py  play_sheet.py  play_sheet_video.py  play_video.py  player_skysheet.py  pyproject.toml  requirements.txt  t2.py
.git_hooks/: add_merge_prefix.py
code_flow/: 1_analysis_video.py  2_generate_native_sheet.py  3_generate_sheet.py  get_boundary.py  hsv_fix.py
config/: base.py  effect_config_parameter.json
for_dev/: main.py  t.gs
logs/: Reverse-sheet-sky-children-of-the-light
output/: analysis_from_video.json  analysis_from_video.txt  enhance_sheet.json  native_sheet.json  new_conversion.py  original_sheet.txt  output_sheet.txt  penultimate_sheet.txt  sort_sheet.json  sort_sheet.txt
